--- a/_posts/2019-03-27-SQL(1).md
+++ b/_posts/2019-03-27-SQL(1).md
@@ -39,7 +39,7 @@ SHOW databases;
 +--------------------+
 
 USE dbexample;
-SOURCE C:\(path where the file is saved)\scott.sql
+SOURCE C:/(path where the file is saved)/scott.sql
 SHOW tables;
 +---------------------+
 | Tables_in_dbexample |
@@ -151,7 +151,7 @@ SELECT distinct job FROM scott_emp;
 
 ## 2. 확장 문법
 #### 2.1. 정렬 기능: ORDER BY fieldname [ , fieldname, ... ] [ASC] DESC
-<font color = orange> **Note: !!정렬 기능은 항상 제일 마지막에!**</font>
+**Note: !!정렬 기능은 항상 제일 마지막에!**
 
 ```sql
 -- 급여가 많은 순으로 이름, 급여, 부서코드를 조회
@@ -243,7 +243,6 @@ SELECT ename, deptno, job, sal FROM scott_emp
 
 SELECT ename, deptno, job, sal FROM scott_emp
 	WHERE sal BETWEEN 1500 AND 2000;
-
 +--------+--------+----------+------+
 | ename  | deptno | job      | sal  |
 +--------+--------+----------+------+
@@ -259,7 +258,6 @@ SELECT ename, deptno, job, sal FROM scott_emp
 
 SELECT ename, deptno, job, sal FROM scott_emp
 	WHERE job IN ('clerk', 'salesman', 'analyst');
-
 +--------+--------+----------+------+
 | ename  | deptno | job      | sal  |
 +--------+--------+----------+------+
@@ -282,7 +280,6 @@ SELECT ename, job, hiredate FROM scott_emp
 	WHERE hiredate > '1982-01-01';
     WHERE hiredate > '1982/01/01';
     WHERE hiredate > '1982,01,01';
-
 +--------+---------+---------------------+
 | ename  | job     | hiredate            |
 +--------+---------+---------------------+
@@ -299,8 +296,6 @@ SELECT ename, empno, job, sal, comm from scott_emp
 
 SELECT ename, empno, job, sal, comm from scott_emp
 	WHERE job != 'salesman';
-```
-```
 +--------+-------+-----------+------+------+
 | ename  | empno | job       | sal  | comm |
 +--------+-------+-----------+------+------+
@@ -316,5 +311,38 @@ SELECT ename, empno, job, sal, comm from scott_emp
 | MILLER |  7934 | CLERK     | 1300 | NULL |
 +--------+-------+-----------+------+------+
 ```
+```sql
+-- 커미션이 있는 직원
+SELECT ename, empno, job, sal, comm from scott_emp
+	WHERE comm IS NOT null;
 
+SELECT ename, empno, job, sal, comm from scott_emp
+	WHERE comm >= 0;
++--------+-------+----------+------+------+
+| ename  | empno | job      | sal  | comm |
++--------+-------+----------+------+------+
+| ALLEN  |  7499 | SALESMAN | 1600 |  300 |
+| WARD   |  7521 | SALESMAN | 1250 |  500 |
+| MARTIN |  7654 | SALESMAN | 1250 | 1400 |
+| TURNER |  7844 | SALESMAN | 1500 |    0 |
++--------+-------+----------+------+------+
+```
 
+#### 2.3 Like 연산자
+> - % : 0개 이상의 문자 대체
+> - _ : 1개 문자 대체
+> 예시: beau% - beau, beaut, beauti, ..
+> 예시: beau___ - beauab, beauti, beaufl ..
+
+```sql
+-- 이름이 s로 시작하는 직원의 이름, 업무, 급여를 조회
+SELECT ename, job, sal FROM scott_emp
+	WHERE ename like '%s';
++-------+---------+------+
+| ename | job     | sal  |
++-------+---------+------+
+| JONES | MANAGER | 2975 |
+| ADAMS | CLERK   | 1100 |
+| JAMES | CLERK   |  950 |
++-------+---------+------+
+```
