--- a/_posts/2019-03-27-SQL(1).md
+++ b/_posts/2019-03-27-SQL(1).md
@@ -328,11 +328,11 @@ SELECT ename, empno, job, sal, comm from scott_emp
 +--------+-------+----------+------+------+
 ```
 
-#### 2.3 Like 연산자
+#### 2.3. Like 연산자
 > - % : 0개 이상의 문자 대체
 > - _ : 1개 문자 대체
-> 예시: beau% - beau, beaut, beauti, ..
-> 예시: beau___ - beauab, beauti, beaufl ..
+> 	- 예시: beau% - beau, beaut, beauti, ..
+> 	- 예시: beau__ - beauab, beauti, beaufl ..
 
 ```sql
 -- 이름이 s로 시작하는 직원의 이름, 업무, 급여를 조회
@@ -346,3 +346,72 @@ SELECT ename, job, sal FROM scott_emp
 | JAMES | CLERK   |  950 |
 +-------+---------+------+
 ```
+
+#### 연습문제
+```sql
+-- 1. 1981년에 입사한 사람의 이름, 업무, 입사일자 조회
+SELECT ename, job, hiredate from scott_emp
+	WHERE hiredate > '1981-01-01' AND hiredate < '1981-12-31;
+
+-- 2. 사번이 7902, 7788, 7566인 사원의 이름, 업무, 급여, 입사일자 조회
+SELECT ename, job, hiredate from scott_emp
+	WHERE empno in (7902, 7788, 7566);
+
+-- 3. 업무가 manager, clerk, analyst가 아닌 직원의 이름, 업무, 급여, 부서번호 조회
+SELECT ename, job, empno from scott_emp
+	WHERE job not in ('manager', 'clerk', 'analyst');
+
+-- 4. 업무가 president 또는 salesman이고 급여가 1500인 직원의 이름, 급여, 업무, 부서번호 조회
+SELECT ename, sal, job, empno from scott_emp
+	WHERE job in ('president', 'salesman') AND sal=1500;
+
+-- 5. 가장 최근에 입사한 직원의 이름, 부서, 업무, 입사일자 조회 (현재 검색 일자가 1987년이라 가정)??????
+SELECT ename, empno, job, hiredate from scott_emp
+	WHERE
+
+-- 6. 같은 부서내에서 같은 업무를 하는 직원의 급여가 많은 순으로 조회???????
+SELECT * from scott_emp
+	ORDER BY deptno, sal desc;
+
+-- 7. 커미션이 급여보다 10%이상 많은 직원의 급여가 많은 순으로 조회
+SELECT * from scott_emp
+	WHERE comm >= sal*0.1;
+```
+
+## 3. 함수
+#### 3.1. Single-Row Function
+> - String Function:
+> 	- ASCII(), CHAR()
+```sql
+SELECT ASCII('a');
+SELECT CHAR(98);
+```
+> 	- LENGTH()
+```sql
+SELECT LENGTH(ename) FROM scott_emp;
+```
+> 	- INSTR()
+```sql
+SELECT INSTR('foobarbar', 'bar');
+	-> 4
+SELECT INSTR('foobarbar', 'love');
+	-> 0
+```
+> 	- LEFT(), RIGHT(), SUBSTR(), SUBSTRING()
+```sql
+SELECT LEFT('abcdefg', 3);
+	-> abc
+SELECT RIGHT('abcdefg', 4);
+	-> defg
+SELECT SUBSTRING('i lovee SQL', 3);
+	-> lovee SQL
+SELECT SUBSTRING('i lovee SQL', 3, 4);
+	-> love
+SELECT SUBSTRING('i lovee sql', -3);
+	-> sql
+```
+> - Numeric Function
+> - Date Function
+
+#### 3.2. Aggregation Function
+
