--- a/_posts/2019-03-27-SQL(1).md
+++ b/_posts/2019-03-27-SQL(1).md
@@ -351,7 +351,7 @@ SELECT ename, job, sal FROM scott_emp
 ```sql
 -- 1. 1981년에 입사한 사람의 이름, 업무, 입사일자 조회
 SELECT ename, job, hiredate from scott_emp
-	WHERE hiredate > '1981-01-01' AND hiredate < '1981-12-31;
+	WHERE hiredate > '1981-01-01' AND hiredate < '1981-12-31';
 
 -- 2. 사번이 7902, 7788, 7566인 사원의 이름, 업무, 급여, 입사일자 조회
 SELECT ename, job, hiredate from scott_emp
@@ -384,7 +384,9 @@ SELECT * from scott_emp
 > 	- ASCII(), CHAR()
 ```sql
 SELECT ASCII('a');
+	-> 97
 SELECT CHAR(98);
+	-> b
 ```
 > 	- LENGTH()
 ```sql
@@ -409,8 +411,29 @@ SELECT SUBSTRING('i lovee SQL', 3, 4);
 	-> love
 SELECT SUBSTRING('i lovee sql', -3);
 	-> sql
+SELECT SUBSTRING('i lovee sql', -9, 5);
+	-> lovee
 ```
+> 	- LOWER(), UPPER()
+> 	- LTRIM(), RTRIM(), TRIM()
+
 > - Numeric Function
+> 	- CEIL(), FLOOR(), ROUND(), TRUNCATE()
+```sql
+SELECT CEIL(1.23);
+	-> 2
+SELECT FLOOR(1.73);
+	-> 1
+SELECT ROUND(1.23), ROUND(1.73);
+	-> 1 | 2
+SELECT ROUND(1.298, 1);
+	-> 1.3
+SELECT TRUNCATE(1.73, 0);
+	-> 1
+```
+> 	- MOD()
+> 	- RAND()
+
 > - Date Function
 
 #### 3.2. Aggregation Function
