--- a/_posts/2019-03-27-SQL(1).md
+++ b/_posts/2019-03-27-SQL(1).md
@@ -21,7 +21,8 @@ mysql> SELECT name, capital FROM country;
 ```
 
 ## SCOTT
-Download scott.sql
+- Download scott.sql
+
 ```sql
 CREATE database dbExample;
 SHOW databases;
@@ -66,8 +67,8 @@ DESC scott_emp;
 ```
 
 ## 1. SELECT
-> - SELECT 필드명 FROM 테이블명
-> - SELECT * FROM 테이블명
+- SELECT 필드명 FROM 테이블명
+- SELECT * FROM 테이블명
 
 ```sql
 -- field의 가공처리
@@ -150,8 +151,8 @@ SELECT distinct job FROM scott_emp;
 ```
 
 ## 2. 확장 문법
-#### 2.1. 정렬 기능: ORDER BY fieldname [ , fieldname, ... ] [ASC] DESC
-**Note: !!정렬 기능은 항상 제일 마지막에!**
+#### 2.1. 정렬 기능: ORDER BY
+**Note: 정렬 기능은 항상 제일 마지막에**
 
 ```sql
 -- 급여가 많은 순으로 이름, 급여, 부서코드를 조회
@@ -329,10 +330,10 @@ SELECT ename, empno, job, sal, comm from scott_emp
 ```
 
 #### 2.3. Like 연산자
-> - % : 0개 이상의 문자 대체
-> - _ : 1개 문자 대체
-> 	- 예시: beau% - beau, beaut, beauti, ..
-> 	- 예시: beau__ - beauab, beauti, beaufl ..
+- % : 0개 이상의 문자 대체
+- _ : 1개 문자 대체
+- 예시: beau% - beau, beaut, beauti, ..
+- 예시: beau__ - beauab, beauti, beaufl ..
 
 ```sql
 -- 이름이 s로 시작하는 직원의 이름, 업무, 급여를 조회
@@ -379,26 +380,26 @@ SELECT * from scott_emp
 
 ## 3. 함수
 #### 3.1. Single-Row Function
-> - String Function:
-> 	- ASCII(), CHAR()
+- String Function:
+	- ASCII(), CHAR()
 ```sql
 SELECT ASCII('a');
 	-> 97
 SELECT CHAR(98);
 	-> b
 ```
-> 	- LENGTH()
+	- LENGTH()
 ```sql
 SELECT LENGTH(ename) FROM scott_emp;
 ```
-> 	- INSTR()
+	- INSTR()
 ```sql
 SELECT INSTR('foobarbar', 'bar');
 	-> 4
 SELECT INSTR('foobarbar', 'love');
 	-> 0
 ```
-> 	- LEFT(), RIGHT(), SUBSTR(), SUBSTRING()
+	- LEFT(), RIGHT(), SUBSTR(), SUBSTRING()
 ```sql
 SELECT LEFT('abcdefg', 3);
 	-> abc
@@ -413,11 +414,11 @@ SELECT SUBSTRING('i lovee sql', -3);
 SELECT SUBSTRING('i lovee sql', -9, 5);
 	-> lovee
 ```
-> 	- LOWER(), UPPER()
-> 	- LTRIM(), RTRIM(), TRIM()
+	- LOWER(), UPPER()
+	- LTRIM(), RTRIM(), TRIM()
 
-> - Numeric Function
-> 	- CEIL(), FLOOR(), ROUND(), TRUNCATE()
+- Numeric Function
+	- CEIL(), FLOOR(), ROUND(), TRUNCATE()
 ```sql
 SELECT CEIL(1.23);
 	-> 2
@@ -430,10 +431,10 @@ SELECT ROUND(1.298, 1);
 SELECT TRUNCATE(1.73, 0);
 	-> 1
 ```
-> 	- MOD()
-> 	- RAND()
+	- MOD()
+	- RAND()
 
-> - Date Function
+- Date Function
 	- NOW(), SYSDATE(), CURDATE(), CURTIME()
 ```sql
 SELECT NOW();
@@ -443,7 +444,7 @@ SELECT NOW();
 | 2019-03-27 16:37:04 |
 +---------------------+
 ```
-> 	- YEAR(), MONTH(), DAYOFMONTH()
+	- YEAR(), MONTH(), DAYOFMONTH()
 ```sql
 SELECT YEAR(NOW()), MONTH(NOW());
 +-------------+--------------+
@@ -452,7 +453,7 @@ SELECT YEAR(NOW()), MONTH(NOW());
 |        2019 |            3 |
 +-------------+--------------+
 ```
-> 	- DAYOFWEEK(): 1-일요일, WEEKDAY(): 0-월요일
+	- DAYOFWEEK(): 1-일요일, WEEKDAY(): 0-월요일
 ```sql
 SELECT DAYOFWEEK(NOW()), WEEKDAY(NOW());
 +------------------+----------------+
@@ -461,7 +462,7 @@ SELECT DAYOFWEEK(NOW()), WEEKDAY(NOW());
 |                4 |              2 |
 +------------------+----------------+
 ```
-> 	- DAOFYEAR(): 1년 중 며칠이 지났는지 알려줌
+	- DAOFYEAR(): 1년 중 며칠이 지났는지 알려줌
 ```sql
 SELECT DAYOFYEAR(NOW());
 +------------------+
@@ -470,7 +471,7 @@ SELECT DAYOFYEAR(NOW());
 |               86 |
 +------------------+
 ```
-> 	- DATE_ADD(), DATE_SUB()
+	- DATE_ADD(), DATE_SUB()
 ```sql
 SELECT DATE_ADD(NOW(), interval 5 YEAR), DATE_ADD(NOW(), interval 5 DAY);
 +----------------------------------+---------------------------------+
@@ -483,16 +484,16 @@ SELECT DATE_ADD(NOW(), interval 5 YEAR), DATE_ADD(NOW(), interval 5 DAY);
 
 
 #### 3.2. Aggregation Function
-> - SUM(), AVG(), COUNT(), MAX(), MIN()
+- SUM(), AVG(), COUNT(), MAX(), MIN()
 
 #### 3.3. 기타
-> - CONVERT()
+- CONVERT()
 ```sql
 SELECT CONVERT('2019-5-1', DATE);
 SELECT CONVERT(150, CHAR);
 SELECT CONVERT('14:06:10', TIME);
 ```
-> - CASE()
+- CASE()
 ```sql
 -- 업무가 salesman이면 'yes' 이라고하고, 그 외 업무는 'no' 라고 조회
 SELECT ename, job, comm,
@@ -532,7 +533,7 @@ SELECT empno, ename, sal, comm,
 #### 연습문제
 ```sql
 -- 1. 오늘부터 12월 25일까지 몇일이 남았는가?
-SELECT DAYOFYEAR('2019-12-25')-DAYOFYEAR(NOW());
+SELECT DATEDIFF('2019.12.25', NOW());
 +------------------------------------------+
 | DAYOFYEAR('2019-12-25')-DAYOFYEAR(NOW()) |
 +------------------------------------------+
@@ -540,7 +541,26 @@ SELECT DAYOFYEAR('2019-12-25')-DAYOFYEAR(NOW());
 +------------------------------------------+
 
 2. 현재까지 근무한 직원들의 근무일수를 몇주 몇일로 조회(단, 근무일수가 많은 사람 순으로 조회)
-SELECT ename, hiredate, DATEDIFF(NOW(), hiredate)/7 as totalweek FROM scott_emp;
+SELECT ename, TIMESTAMPDIFF(MONTH, hiredate, NOW()) as work_month, TIMESTAMPDIFF(DAY, hiredate, NOW()) as work_day 
+	FROM scott_emp ORDER BY work_month DESC, work_day DESC;
++--------+------------+----------+
+| ename  | work_month | work_day |
++--------+------------+----------+
+| SMITH  |        459 |    13981 |
+| ALLEN  |        457 |    13916 |
+| WARD   |        457 |    13914 |
+| JONES  |        455 |    13875 |
+| BLAKE  |        454 |    13846 |
+| CLARK  |        453 |    13807 |
+| MARTIN |        450 |    13696 |
+| TURNER |        450 |    13716 |
+| KING   |        448 |    13646 |
+| JAMES  |        447 |    13630 |
+| FORD   |        447 |    13630 |
+| MILLER |        446 |    13579 |
+| SCOTT  |        383 |    11667 |
+| ADAMS  |        382 |    11633 |
++--------+------------+----------+
 
 -- 3. 10번 부서 직원들 중 현재까지의 근무월수를 계산해서 조회
 SELECT ename, hiredate, ROUND(DATEDIFF(NOW(), hiredate)/30) as totalmonth FROM scott_emp 
@@ -567,7 +587,7 @@ SELECT ename, hiredate, DATE_ADD(hiredate, interval 13 MONTH) as checkingday FRO
 +-------+---------------------+---------------------+
 
 -- 5. 모든 직원에 대해 입사한 달의 근무일수를 조회
-select ename, DAYOFMONTH(hiredate) as daysofworking FROM scott_emp;
+SELECT ename, DAYOFMONTH(hiredate) as daysofworking FROM scott_emp;
 +--------+---------------+
 | ename  | daysofworking |
 +--------+---------------+
