--- a/_posts/2019-03-29-SQL(3).md
+++ b/_posts/2019-03-29-SQL(3).md
@@ -19,7 +19,8 @@ share: true
 		- LEFT OUTER JOIN
 		- RIGHT OUTER JOIN
 		- FULL OUTER JOIN
-
+	- Non-Equi Join: 공통되지 않는 필드의 레코드를 가져오는 방법
+	- SELF JOIN
 
 <br>
 
@@ -47,7 +48,7 @@ INSERT INTO tableB VALUES(4, 40);
 INSERT INTO tableB VALUES(5, 50); 
 INSERT INTO tableB VALUES(8, 80); 
 ```
-### inner join
+### Inner Join
 ```sql
 SELECT tableA.id, tableA.value FROM tableA INNER JOIN tableB 
 	ON tableA.id = tableB.id; 
@@ -59,9 +60,8 @@ SELECT a.id, a.value FROM tableA a INNER JOIN tableB b
 
 -- mysql 자체 문법
 SELECT a.id, a.value FROM tableA a, tableB b 
-	 WHERE a.id = b.id; ```
+	 WHERE a.id = b.id; 
 
-```sql
 -- 직원의 사번, 이름, 업무, 부서번호, 부서명을 조회
 SELECT empno, ename, job, scott_emp.deptno, dname 
 	FROM scott_emp INNER JOIN scott_dept 
@@ -88,14 +88,14 @@ SELECT empno, ename, job, scott_emp.deptno, dname
 
 -- salesman에 대해서 직원의 사번, 이름, 업무, 부서번호, 부서명을 조회
 -- ! 조건을 조인하면서 같이줄 때
-SELECT empno, ename, job, emp.deptno, dname 
-	FROM scott_emp emp INNER JOIN scott_dept dept 
-	ON emp.deptno = dept.deptno AND job = 'salesman';
+SELECT empno, ename, job, e.deptno, dname 
+	FROM scott_emp e INNER JOIN scott_dept d 
+	ON e.deptno = d.deptno AND job = 'salesman';
 
 -- ! 조건을 조인 하고 나서 뒤에 줄 때
-SELECT empno, ename, job, emp.deptno, dname 
-	FROM scott_emp emp INNER JOIN scott_dept dept 
-	ON emp.deptno = dept.deptno 
+SELECT empno, ename, job, e.deptno, dname 
+	FROM scott_emp e INNER JOIN scott_dept d 
+	ON e.deptno = d.deptno 
 	WHERE job = 'salesman';
 
 +-------+--------+----------+--------+-------+
@@ -111,7 +111,7 @@ SELECT empno, ename, job, emp.deptno, dname
 SELECT ename, job, scott_dept.dname 
 	FROM scott_dept INNER JOIN scott_emp 
 	on scott_emp.deptno = scott_dept.deptno 
-	where loc="NEW YORK";
+	where loc='NEW YORK';
 +--------+-----------+------------+
 | ename  | job       | dname      |
 +--------+-----------+------------+
@@ -120,18 +120,65 @@ SELECT ename, job, scott_dept.dname
 | MILLER | CLERK     | ACCOUNTING |
 +--------+-----------+------------+
 ```
-### outer join
+
+### Outer Join
 ```sql
 SELECT a.id, a.value FROM tableA a LEFT OUTER JOIN tableB b 
 	ON a.id = b.id;
 
-    +------+-------+
-    | id   | value |
-    +------+-------+
-    |    1 |    10 |
-    |    2 |    20 |
-    |    5 |    50 |
-    |    3 |    30 |
-    |    7 |    70 |
-    +------+-------+
++------+-------+
+| id   | value |
++------+-------+
+|    1 |    10 |
+|    2 |    20 |
+|    5 |    50 |
+|    3 |    30 |
+|    7 |    70 |
++------+-------+
+
+SELECT b.id, b.value FROM tableA a RIGHT OUTER JOIN tableB b 
+	ON a.id = b.id;
+
++------+-------+
+| id   | value |
++------+-------+
+|    1 |    10 |
+|    2 |    20 |
+|    5 |    50 |
+|    4 |    40 |
+|    8 |    80 |
++------+-------+
+```
+```sql
+-- 직원들의 이름, 급여, 근무지를 조회. 단, 부서명과 근무지는 모두 출력할 수 있도록 하시오
+SELECT ename, sal, dname, loc 
+	FROM scott_emp RIGHT OUTER JOIN scott_dept 
+	ON scott_emp.deptno = scott_dept.deptno;
+```
+### Non-Equi Join
+
+```sql
+---직원들의 사번, 이름, 급여, 급여등급 조회
+SELECT empno, ename, sal, grade, losal, hisal 
+	FROM scott_emp e INNER JOIN scott_salgrade s 
+	ON e.sal >= s.losal AND e.sal <= s.hisal;
+
++-------+--------+------+-------+-------+-------+
+| empno | ename  | sal  | grade | losal | hisal |
++-------+--------+------+-------+-------+-------+
+|  7369 | SMITH  |  800 |     1 |   700 |  1200 |
+|  7499 | ALLEN  | 1600 |     3 |  1401 |  2000 |
+|  7521 | WARD   | 1250 |     2 |  1201 |  1400 |
+|  7566 | JONES  | 2975 |     4 |  2001 |  3000 |
+|  7654 | MARTIN | 1250 |     2 |  1201 |  1400 |
+|  7698 | BLAKE  | 2850 |     4 |  2001 |  3000 |
+|  7782 | CLARK  | 2450 |     4 |  2001 |  3000 |
+|  7788 | SCOTT  | 3000 |     4 |  2001 |  3000 |
+|  7839 | KING   | 5000 |     5 |  3001 |  9999 |
+|  7844 | TURNER | 1500 |     3 |  1401 |  2000 |
+|  7876 | ADAMS  | 1100 |     1 |   700 |  1200 |
+|  7900 | JAMES  |  950 |     1 |   700 |  1200 |
+|  7902 | FORD   | 3000 |     4 |  2001 |  3000 |
+|  7934 | MILLER | 1300 |     2 |  1201 |  1400 |
++-------+--------+------+-------+-------+-------+
 ```
