--- a/_posts/2019-03-29-SQL(3).md
+++ b/_posts/2019-03-29-SQL(3).md
@@ -10,8 +10,8 @@ share: true
 ---
 
 ## 6. JOIN
- - 여러 개의 테이블을 병합하여 하나의 결과를 도출하기 위한 방법
- - 종류
+- 여러 개의 테이블을 병합하여 하나의 결과를 도출하기 위한 방법
+- 종류
 	- Cartesian Product Join (데카르트 곱)
 	- Equi Join: 공통 필드의 레코드를 가져오는 방법 (중복)
 		- INNER JOIN (중복 제거)
@@ -21,6 +21,7 @@ share: true
 		- FULL OUTER JOIN
 	- Non-Equi Join: 공통되지 않는 필드의 레코드를 가져오는 방법
 	- SELF JOIN
+- 세개 이상 JOIN 할 경우
 
 <br>
 
@@ -36,6 +37,11 @@ CREATE TABLE tableB(
     value	int	null
 );
 
+CREATE TABLE tableC( 
+	id	int	null,
+    value	int	null
+);
+
 INSERT INTO tableA VALUES(1, 10); 
 INSERT INTO tableA VALUES(2, 20); 
 INSERT INTO tableA VALUES(3, 30); 
@@ -47,6 +53,12 @@ INSERT INTO tableB VALUES(2, 20);
 INSERT INTO tableB VALUES(4, 40); 
 INSERT INTO tableB VALUES(5, 50); 
 INSERT INTO tableB VALUES(8, 80); 
+
+INSERT INTO tableC VALUES(1, 10); 
+INSERT INTO tableC VALUES(2, 20); 
+INSERT INTO tableC VALUES(7, 70); 
+INSERT INTO tableC VALUES(8, 80); 
+INSERT INTO tableC VALUES(9, 90); 
 ```
 ### Inner Join
 ```sql
@@ -67,24 +79,24 @@ SELECT empno, ename, job, scott_emp.deptno, dname
 	FROM scott_emp INNER JOIN scott_dept 
 	ON scott_emp.deptno = scott_dept.deptno;
 
-+-------+--------+-----------+--------+------------+
-| empno | ename  | job       | deptno | dname      |
-+-------+--------+-----------+--------+------------+
-|  7782 | CLARK  | MANAGER   |     10 | ACCOUNTING |
-|  7839 | KING   | PRESIDENT |     10 | ACCOUNTING |
-|  7934 | MILLER | CLERK     |     10 | ACCOUNTING |
-|  7369 | SMITH  | CLERK     |     20 | RESEARCH   |
-|  7566 | JONES  | MANAGER   |     20 | RESEARCH   |
-|  7788 | SCOTT  | ANALYST   |     20 | RESEARCH   |
-|  7876 | ADAMS  | CLERK     |     20 | RESEARCH   |
-|  7902 | FORD   | ANALYST   |     20 | RESEARCH   |
-|  7499 | ALLEN  | SALESMAN  |     30 | SALES      |
-|  7521 | WARD   | SALESMAN  |     30 | SALES      |
-|  7654 | MARTIN | SALESMAN  |     30 | SALES      |
-|  7698 | BLAKE  | MANAGER   |     30 | SALES      |
-|  7844 | TURNER | SALESMAN  |     30 | SALES      |
-|  7900 | JAMES  | CLERK     |     30 | SALES      |
-+-------+--------+-----------+--------+------------+
+    +-------+--------+-----------+--------+------------+
+    | empno | ename  | job       | deptno | dname      |
+    +-------+--------+-----------+--------+------------+
+    |  7782 | CLARK  | MANAGER   |     10 | ACCOUNTING |
+    |  7839 | KING   | PRESIDENT |     10 | ACCOUNTING |
+    |  7934 | MILLER | CLERK     |     10 | ACCOUNTING |
+    |  7369 | SMITH  | CLERK     |     20 | RESEARCH   |
+    |  7566 | JONES  | MANAGER   |     20 | RESEARCH   |
+    |  7788 | SCOTT  | ANALYST   |     20 | RESEARCH   |
+    |  7876 | ADAMS  | CLERK     |     20 | RESEARCH   |
+    |  7902 | FORD   | ANALYST   |     20 | RESEARCH   |
+    |  7499 | ALLEN  | SALESMAN  |     30 | SALES      |
+    |  7521 | WARD   | SALESMAN  |     30 | SALES      |
+    |  7654 | MARTIN | SALESMAN  |     30 | SALES      |
+    |  7698 | BLAKE  | MANAGER   |     30 | SALES      |
+    |  7844 | TURNER | SALESMAN  |     30 | SALES      |
+    |  7900 | JAMES  | CLERK     |     30 | SALES      |
+    +-------+--------+-----------+--------+------------+
 
 -- salesman에 대해서 직원의 사번, 이름, 업무, 부서번호, 부서명을 조회
 -- ! 조건을 조인하면서 같이줄 때
@@ -181,4 +193,30 @@ SELECT empno, ename, sal, grade, losal, hisal
 |  7902 | FORD   | 3000 |     4 |  2001 |  3000 |
 |  7934 | MILLER | 1300 |     2 |  1201 |  1400 |
 +-------+--------+------+-------+-------+-------+
+```
+
+### SELF JOIN
+```sql
+-- 직원의 사번, 이름, 업무, 관리자, 관리자이름 조회
+-- 별명주기 필수
+SELECT e.empno, e.ename, e.job, e.mgr, m.ename 
+	FROM scott_emp e INNER JOIN scott_emp m 
+    ON e.mgr = m.empno;
++-------+--------+----------+------+-------+
+| empno | ename  | job      | mgr  | ename |
++-------+--------+----------+------+-------+
+|  7369 | SMITH  | CLERK    | 7902 | FORD  |
+|  7499 | ALLEN  | SALESMAN | 7698 | BLAKE |
+|  7521 | WARD   | SALESMAN | 7698 | BLAKE |
+|  7566 | JONES  | MANAGER  | 7839 | KING  |
+|  7654 | MARTIN | SALESMAN | 7698 | BLAKE |
+|  7698 | BLAKE  | MANAGER  | 7839 | KING  |
+|  7782 | CLARK  | MANAGER  | 7839 | KING  |
+|  7788 | SCOTT  | ANALYST  | 7566 | JONES |
+|  7844 | TURNER | SALESMAN | 7698 | BLAKE |
+|  7876 | ADAMS  | CLERK    | 7788 | SCOTT |
+|  7900 | JAMES  | CLERK    | 7698 | BLAKE |
+|  7902 | FORD   | ANALYST  | 7566 | JONES |
+|  7934 | MILLER | CLERK    | 7782 | CLARK |
++-------+--------+----------+------+-------+
 ```
