--- a/_posts/2019-03-28-SQL(2).md
+++ b/_posts/2019-03-28-SQL(2).md
@@ -22,8 +22,8 @@ DROP table tableTest;
 
 1. INSERT
 ```sql
-INSERT INTO 테이블명 (필드명, ...) VALUES (값...)
-INSERT INTO 테이블명 VALUES (값...)
+INSERT INTO tablename (fieldname, ...) VALUES (values...)
+INSERT INTO tablename VALUES (values...)
 ```
 ```sql
 INSERT INTO tableTest(id, name, regdate) VALUES (1, 'kimmy', '2019-03-26')
@@ -33,4 +33,28 @@ INSERT INTO tableTest VALUES (3, 'jimmy', now())
 ```
 
 2. UPDATE
-3. 
+```sql
+UPDATE tablename
+	SET field='value' [,field='value' ...]
+    WHERE condition;
+```
+```sql
+UPDATE tableTest
+	SET name='scott'
+    WHERE id=3;
+
+3. DELETE
+```sql
+	DELETE FROM tablename WHERE condition;
+    DROP TABLE tablename;
+```
+
+## 5. Sub Query
+- 다른 query문에 포함된 query문
+- 반드시 () 사용
+- 반드시 연산자의 오른쪽에 와야함
+- ORDER BY 사용 불가
+- 연산자
+	- 단일행 연산자
+	- 다중행 연산자: IN, ANY, ALL
+- 다중 열 비교
