--- a/_posts/2019-03-29-SQL(3).md
+++ b/_posts/2019-03-29-SQL(3).md
@@ -11,6 +11,7 @@ share: true
 
 ## 6. JOIN
 - 여러 개의 테이블을 병합하여 하나의 결과를 도출하기 위한 방법
+
 - 종류
 	- Cartesian Product Join (데카르트 곱)
 	- Equi Join: 공통 필드의 레코드를 가져오는 방법 (중복)
@@ -21,7 +22,11 @@ share: true
 		- FULL OUTER JOIN
 	- Non-Equi Join: 공통되지 않는 필드의 레코드를 가져오는 방법
 	- SELF JOIN
+
 - 세개 이상 JOIN 할 경우
+
+- SET 연산자
+	UNION, UNION ALL, INTERSECT, EXCEPT
 
 <br>
 
@@ -79,24 +84,24 @@ SELECT empno, ename, job, scott_emp.deptno, dname
 	FROM scott_emp INNER JOIN scott_dept 
 	ON scott_emp.deptno = scott_dept.deptno;
 
-    +-------+--------+-----------+--------+------------+
-    | empno | ename  | job       | deptno | dname      |
-    +-------+--------+-----------+--------+------------+
-    |  7782 | CLARK  | MANAGER   |     10 | ACCOUNTING |
-    |  7839 | KING   | PRESIDENT |     10 | ACCOUNTING |
-    |  7934 | MILLER | CLERK     |     10 | ACCOUNTING |
-    |  7369 | SMITH  | CLERK     |     20 | RESEARCH   |
-    |  7566 | JONES  | MANAGER   |     20 | RESEARCH   |
-    |  7788 | SCOTT  | ANALYST   |     20 | RESEARCH   |
-    |  7876 | ADAMS  | CLERK     |     20 | RESEARCH   |
-    |  7902 | FORD   | ANALYST   |     20 | RESEARCH   |
-    |  7499 | ALLEN  | SALESMAN  |     30 | SALES      |
-    |  7521 | WARD   | SALESMAN  |     30 | SALES      |
-    |  7654 | MARTIN | SALESMAN  |     30 | SALES      |
-    |  7698 | BLAKE  | MANAGER   |     30 | SALES      |
-    |  7844 | TURNER | SALESMAN  |     30 | SALES      |
-    |  7900 | JAMES  | CLERK     |     30 | SALES      |
-    +-------+--------+-----------+--------+------------+
++-------+--------+-----------+--------+------------+
+| empno | ename  | job       | deptno | dname      |
++-------+--------+-----------+--------+------------+
+|  7782 | CLARK  | MANAGER   |     10 | ACCOUNTING |
+|  7839 | KING   | PRESIDENT |     10 | ACCOUNTING |
+|  7934 | MILLER | CLERK     |     10 | ACCOUNTING |
+|  7369 | SMITH  | CLERK     |     20 | RESEARCH   |
+|  7566 | JONES  | MANAGER   |     20 | RESEARCH   |
+|  7788 | SCOTT  | ANALYST   |     20 | RESEARCH   |
+|  7876 | ADAMS  | CLERK     |     20 | RESEARCH   |
+|  7902 | FORD   | ANALYST   |     20 | RESEARCH   |
+|  7499 | ALLEN  | SALESMAN  |     30 | SALES      |
+|  7521 | WARD   | SALESMAN  |     30 | SALES      |
+|  7654 | MARTIN | SALESMAN  |     30 | SALES      |
+|  7698 | BLAKE  | MANAGER   |     30 | SALES      |
+|  7844 | TURNER | SALESMAN  |     30 | SALES      |
+|  7900 | JAMES  | CLERK     |     30 | SALES      |
++-------+--------+-----------+--------+------------+
 
 -- salesman에 대해서 직원의 사번, 이름, 업무, 부서번호, 부서명을 조회
 -- ! 조건을 조인하면서 같이줄 때
@@ -202,6 +207,8 @@ SELECT empno, ename, sal, grade, losal, hisal
 SELECT e.empno, e.ename, e.job, e.mgr, m.ename 
 	FROM scott_emp e INNER JOIN scott_emp m 
     ON e.mgr = m.empno;
+```
+<pre class='output'>
 +-------+--------+----------+------+-------+
 | empno | ename  | job      | mgr  | ename |
 +-------+--------+----------+------+-------+
@@ -219,4 +226,129 @@ SELECT e.empno, e.ename, e.job, e.mgr, m.ename
 |  7902 | FORD   | ANALYST  | 7566 | JONES |
 |  7934 | MILLER | CLERK    | 7782 | CLARK |
 +-------+--------+----------+------+-------+
+</pre>
+
+
+## 세개 이상 JOIN
+```sql
+SELECT a.id, a.value, b.id, b.value, c.id, c.value
+	FROM tableA a INNER JOIN tableB b
+    ON a.id = b.id
+    INNER JOIN tableC c
+    ON b.id = c.id;
+
+-- mysql 자체 문법
+SELECT a.id, a.value, b.id, b.value, c.id, c.value
+	FROM tableA a, tableB b, tableC c
+    WHERE a.id = b.id AND b.id = c.id;
 ```
+
+## SET 연산자
+```sql
+SELECT deptno FROM scott_emp 
+UNION 
+SELECT deptno FROM scott_dept;
+
++--------+
+| deptno |
++--------+
+|     10 |
+|     20 |
+|     30 |
+|     40 |
++--------+
+
+SELECT deptno FROM scott_emp 
+UNION ALL 
+SELECT deptno FROM scott_dept;
+
++--------+
+| deptno |
++--------+
+|     10 |
+|     10 |
+|     10 |
+|     20 |
+|     20 |
+|     20 |
+|     20 |
+|     20 |
+|     30 |
+|     30 |
+|     30 |
+|     30 |
+|     30 |
+|     30 |
+|     10 |
+|     20 |
+|     30 |
+|     40 |
++--------+
+```
+
+## 7. 데이터 무결성 (Integrity)
+- **제약: Constraint**
+
+- What? How?
+    - 실체 (Entity: 주로 table을 의미) 무결성
+        - 데이터 중복 방지
+        - PRIMARY KEY, UNIQUE
+    - 영역 (Domain) 무결성
+        - CHECK (mysql은 x)
+    - 참조 (Reference) 무결성
+        - FOREIGN KEY
+        - 부모 table: 참조 당하는.. 자식 table: 참조하는..
+
+- 컬럼의 속성
+	- NN (Not Null)
+		- PRIMARY KEY
+	- ND (Not Duplicate)
+		- PRIMARY KEY
+		- UNIQUE
+	- NC (Not Change)
+		- FOREIGN KEY
+
+<br>
+
+```sql
+CREATE TABLE tableEXAM( 
+	id	int, 
+    name	varchar(10) 
+);
+
+INSERT INTO tableEXAM(id) VALUES(1);
+INSERT INTO tableEXAM(id) VALUES(1);
+
+-- PRIMARY KEY: 한 테이블 당 한개만 소유
+ALTER TABLE tableEXAM ADD CONSTRAINT pk_id PRIMARY KEY(id);
+DELETE FROM tableEXAM;
+ALTER TABLE tableEXAM ADD CONSTRAINT pk_id PRIMARY KEY(id);
+
+-- ND
+INSERT INTO tableEXAM(id) VALUES(1);
+INSERT INTO tableEXAM(id) VALUES(1); -- ERROR
+
+-- NN
+INSERT INTO tableEXAM(name) VALUES('kimmy'); -- ERROR
+```
+
+```sql
+-- PRIMARY KEY 지정 방법
+DROP TABLE tableEXAM;
+CREATE TABLE tableEXAM(
+	id	int	PRIMARY KEY,
+	name varchar(10)
+);
+
+DROP TABLE tableEXAM;
+CREATE TABLE tableEXAM(
+	id	int,
+	name varchar(10)
+	CONSTRAINT pk_id PRIMARY KEY(id)
+);
+```
+```sql
+-- data dictionary
+```
+
+
