--- a/_posts/2019-03-27-SQL(1).md
+++ b/_posts/2019-03-27-SQL(1).md
@@ -18,6 +18,11 @@ mysql> USE world;
 mysql> SHOW tables;
 mysql> DESC country;
 mysql> SELECT name, capital FROM country;
+-- sqlplus창 보기 화면 여백 조절 편집 명령어
+-- 단순 sqlplus tool만의 평집 명령어
+-- 영구 저장 안됨. sqlplus 실행시마다 해 줘야 함
+mysql> set linesize 200
+mysql> set pagesize 200
 ```
 
 ## SCOTT
@@ -26,6 +31,8 @@ mysql> SELECT name, capital FROM country;
 ```sql
 CREATE database dbExample;
 SHOW databases;
+```
+```
 +--------------------+
 | Database           |
 +--------------------+
@@ -38,10 +45,13 @@ SHOW databases;
 | sys                |
 | world              |
 +--------------------+
-
+```
+```sql
 USE dbexample;
-SOURCE C:/(path where the file is saved)/scott.sql
+SOURCE C:/('path where the file is saved')/scott.sql
 SHOW tables;
+```
+```
 +---------------------+
 | Tables_in_dbexample |
 +---------------------+
@@ -50,8 +60,11 @@ SHOW tables;
 | scott_emp           |
 | scott_salgrade      |
 +---------------------+
-
+```
+```sql
 DESC scott_emp;
+```
+```
 +----------+-------------+------+-----+---------+-------+
 | Field    | Type        | Null | Key | Default | Extra |
 +----------+-------------+------+-----+---------+-------+
@@ -67,12 +80,15 @@ DESC scott_emp;
 ```
 
 ## 1. SELECT
-- SELECT 필드명 FROM 테이블명
-- SELECT * FROM 테이블명
+- SELECT 절: 검색하고자 하는 필드명
+	 FROM 절: 테이블명
+- 실행순서: from 절 -> select 절
 
 ```sql
 -- field의 가공처리
 SELECT empno, ename, sal+100 FROM scott_emp;
+```
+```
 +-------+--------+---------+
 | empno | ename  | sal+100 |
 +-------+--------+---------+
@@ -97,6 +113,8 @@ SELECT empno, ename, sal+100 FROM scott_emp;
 SELECT empno, ename, mgr manager FROM scott_emp;
 SELECT empno, ename, mgr as manager FROM scott_emp;
 SELECT empno, ename, mgr as 'my manager' FROM scott_emp;
+```
+```
 +-------+--------+------------+
 | empno | ename  | my manager |
 +-------+--------+------------+
@@ -119,6 +137,8 @@ SELECT empno, ename, mgr as 'my manager' FROM scott_emp;
 ```sql
 -- 중복 제거: distinct
 SELECT job FROM scott_emp;
+```
+```
 +-----------+
 | job       |
 +-----------+
@@ -137,8 +157,11 @@ SELECT job FROM scott_emp;
 | ANALYST   |
 | CLERK     |
 +-----------+
-
+```
+```sql
 SELECT distinct job FROM scott_emp;
+```
+```
 +-----------+
 | job       |
 +-----------+
@@ -152,12 +175,19 @@ SELECT distinct job FROM scott_emp;
 
 ## 2. 확장 문법
 #### 2.1. 정렬 기능: ORDER BY
+- SELECT 절
+	FROM 절
+	ORDER BY 절
+- 실행순서: from 절 -> select 절 -> order by 절
 **Note: 정렬 기능은 항상 제일 마지막에**
 
 ```sql
--- 급여가 많은 순으로 이름, 급여, 부서코드를 조회
-SELECT ename, sal, deptno FROM scott_emp
-	ORDER BY sal DESC;
+-- 급여가 많은 순 (내림차순 - DESC) 으로 이름, 급여, 부서코드를 조회
+SELECT ename, sal, deptno 
+FROM scott_emp
+ORDER BY sal DESC;
+```
+```
 +--------+------+--------+
 | ename  | sal  | deptno |
 +--------+------+--------+
@@ -176,10 +206,14 @@ SELECT ename, sal, deptno FROM scott_emp
 | JAMES  |  950 |     30 |
 | SMITH  |  800 |     20 |
 +--------+------+--------+
-
--- 부서별로 급여가 적은 순으로 이름, 급여, 부서코드 조회
-SELECT ename, sal, deptno FROM scott_emp
-	ORDER BY deptno, sal;
+```
+```sql
+-- 부서별로 급여가 적은 순 (오름차순 - ASC) 으로 이름, 급여, 부서코드 조회
+SELECT ename, sal, deptno 
+FROM scott_emp
+ORDER BY deptno, sal;
+```
+```
 +--------+------+--------+
 | ename  | sal  | deptno |
 +--------+------+--------+
@@ -200,11 +234,18 @@ SELECT ename, sal, deptno FROM scott_emp
 +--------+------+--------+
 ```
 
-#### 2.2. 조건 기능 (레코드 필터링): WHERE 조건문
+#### 2.2. 조건 기능 (레코드 필터링): WHERE 
+- SELECT 절
+	FROM 절
+	WHERE 절
+- 실행순서: from 절 -> where 절 -> select 절
 ```sql
 -- 급여가 3000$ 이상인 직원의 사번, 이름, 급여를 조회
-SELECT empno, ename, sal FROM scott_emp
-	WHERE sal >= 3000;
+SELECT empno, ename, sal 
+FROM scott_emp
+WHERE sal >= 3000;
+```
+```
 +-------+-------+------+
 | empno | ename | sal  |
 +-------+-------+------+
@@ -215,8 +256,11 @@ SELECT empno, ename, sal FROM scott_emp
 ```
 ```sql
 -- 업무가 manager인 직원의 이름, 부서, 업무, 급여 조회
-SELECT empno, ename, sal FROM scott_emp
-	WHERE job='manager';
+SELECT empno, ename, sal 
+FROM scott_emp
+WHERE job='manager';
+```
+```
 +-------+-------+------+
 | empno | ename | sal  |
 +-------+-------+------+
@@ -227,8 +271,11 @@ SELECT empno, ename, sal FROM scott_emp
 ```
 ```sql
 -- 부서가 20이고 업무가 analyst인 직원의 이름, 부서, 업무, 급여 조회
-SELECT ename, deptno, job, sal FROM scott_emp
-	WHERE deptno=20 AND job='Analyst';
+SELECT ename, deptno, job, sal 
+FROM scott_emp
+WHERE deptno=20 AND job='Analyst';
+```
+```
 +-------+--------+---------+------+
 | ename | deptno | job     | sal  |
 +-------+--------+---------+------+
@@ -238,12 +285,16 @@ SELECT ename, deptno, job, sal FROM scott_emp
 ```
 ```sql
 -- 급여가 1500 이상 2500 미만을 받는 직원의 이름, 부서, 업무 급여를 조회 (단, 급여가 많은 순으로 조회)
-SELECT ename, deptno, job, sal FROM scott_emp
-	WHERE sal >= 1500 AND sal <= 2000
-	ORDER BY sal DESC;
+SELECT ename, deptno, job, sal 
+FROM scott_emp
+WHERE sal >= 1500 AND sal <= 2000
+ORDER BY sal DESC;
 
-SELECT ename, deptno, job, sal FROM scott_emp
-	WHERE sal BETWEEN 1500 AND 2000;
+SELECT ename, deptno, job, sal 
+FROM scott_emp
+WHERE sal BETWEEN 1500 AND 2000;
+```
+```
 +--------+--------+----------+------+
 | ename  | deptno | job      | sal  |
 +--------+--------+----------+------+
@@ -254,11 +305,15 @@ SELECT ename, deptno, job, sal FROM scott_emp
 ```
 ```sql
 -- 업무가 clerk, salesman, analyst인 직원의 이름, 부서, 업무, 급여 조회
-SELECT ename, deptno, job, sal FROM scott_emp
-	WHERE job='clerk' OR job='salesman' OR job='analyst';
+SELECT ename, deptno, job, sal 
+FROM scott_emp
+WHERE job='clerk' OR job='salesman' OR job='analyst';
 
-SELECT ename, deptno, job, sal FROM scott_emp
-	WHERE job IN ('clerk', 'salesman', 'analyst');
+SELECT ename, deptno, job, sal 
+FROM scott_emp
+WHERE job IN ('clerk', 'salesman', 'analyst');
+```
+```
 +--------+--------+----------+------+
 | ename  | deptno | job      | sal  |
 +--------+--------+----------+------+
@@ -277,10 +332,13 @@ SELECT ename, deptno, job, sal FROM scott_emp
 ```
 ```sql
 -- 1982/01/01 이후에 입사한 직원의 이름, 업무, 입사일자 조회
-SELECT ename, job, hiredate FROM scott_emp
-	WHERE hiredate > '1982-01-01';
-	WHERE hiredate > '1982/01/01';
-	WHERE hiredate > '1982,01,01';
+SELECT ename, job, hiredate 
+FROM scott_emp
+WHERE hiredate > '1982-01-01';
+WHERE hiredate > '1982/01/01';
+WHERE hiredate > '1982,01,01';
+```
+```
 +--------+---------+---------------------+
 | ename  | job     | hiredate            |
 +--------+---------+---------------------+
@@ -292,11 +350,15 @@ SELECT ename, job, hiredate FROM scott_emp
 ```
 ```sql
 -- 커미션이 없는 직원의 이름, 부서, 업무, 급여, 커미션 조회
-SELECT ename, empno, job, sal, comm from scott_emp
-	WHERE comm is null;
+SELECT ename, empno, job, sal, comm 
+FROM scott_emp
+WHERE comm is null;
 
-SELECT ename, empno, job, sal, comm from scott_emp
-	WHERE job != 'salesman';
+SELECT ename, empno, job, sal, comm 
+FROM scott_emp
+WHERE job != 'salesman';
+```
+```
 +--------+-------+-----------+------+------+
 | ename  | empno | job       | sal  | comm |
 +--------+-------+-----------+------+------+
@@ -314,11 +376,15 @@ SELECT ename, empno, job, sal, comm from scott_emp
 ```
 ```sql
 -- 커미션이 있는 직원
-SELECT ename, empno, job, sal, comm from scott_emp
-	WHERE comm IS NOT null;
+SELECT ename, empno, job, sal, comm 
+FROM scott_emp
+WHERE comm IS NOT null;
 
-SELECT ename, empno, job, sal, comm from scott_emp
-	WHERE comm >= 0;
+SELECT ename, empno, job, sal, comm 
+FROM scott_emp
+WHERE comm >= 0;
+```
+```
 +--------+-------+----------+------+------+
 | ename  | empno | job      | sal  | comm |
 +--------+-------+----------+------+------+
@@ -339,6 +405,8 @@ SELECT ename, empno, job, sal, comm from scott_emp
 -- 이름이 s로 시작하는 직원의 이름, 업무, 급여를 조회
 SELECT ename, job, sal FROM scott_emp
 	WHERE ename like '%s';
+```
+```
 +-------+---------+------+
 | ename | job     | sal  |
 +-------+---------+------+
@@ -351,31 +419,36 @@ SELECT ename, job, sal FROM scott_emp
 #### 연습문제
 ```sql
 -- 1. 1981년에 입사한 사람의 이름, 업무, 입사일자 조회
-SELECT ename, job, hiredate from scott_emp
-	WHERE hiredate > '1981-01-01' AND hiredate < '1981-12-31';
+SELECT ename, job, hiredate 
+FROM scott_emp
+WHERE hiredate > '1981-01-01' AND hiredate < '1981-12-31';
 
 -- 2. 사번이 7902, 7788, 7566인 사원의 이름, 업무, 급여, 입사일자 조회
-SELECT ename, job, hiredate from scott_emp
-	WHERE empno in (7902, 7788, 7566);
+SELECT ename, job, hiredate 
+FROM scott_emp
+WHERE empno in (7902, 7788, 7566);
 
 -- 3. 업무가 manager, clerk, analyst가 아닌 직원의 이름, 업무, 급여, 부서번호 조회
-SELECT ename, job, empno from scott_emp
-	WHERE job not in ('manager', 'clerk', 'analyst');
+SELECT ename, job, empno 
+FROM scott_emp
+WHERE job not in ('manager', 'clerk', 'analyst');
 
 -- 4. 업무가 president 또는 salesman이고 급여가 1500인 직원의 이름, 급여, 업무, 부서번호 조회
-SELECT ename, sal, job, empno from scott_emp
-	WHERE job in ('president', 'salesman') AND sal=1500;
+SELECT ename, sal, job, empno 
+FROM scott_emp
+WHERE job in ('president', 'salesman') AND sal=1500;
 
 -- 5. 가장 최근에 입사한 직원의 이름, 부서, 업무, 입사일자 조회 (현재 검색 일자가 1987년이라 가정)
-SELECT ename, deptno, job, max(hiredate) FROM scott_emp;
+SELECT ename, deptno, job, max(hiredate) 
+FROM scott_emp;
 
 -- 6. 같은 부서내에서 같은 업무를 하는 직원의 급여가 많은 순으로 조회
 SELECT * FROM scott_emp
-	ORDER BY job, sal DESC;
+ORDER BY job, sal DESC;
 
 -- 7. 커미션이 급여보다 10%이상 많은 직원의 급여가 많은 순으로 조회
-SELECT * from scott_emp
-	WHERE comm >= sal*0.1;
+SELECT * FROM scott_emp
+WHERE comm >= sal*0.1;
 ```
 
 ## 3. 함수
@@ -388,7 +461,9 @@ SELECT ASCII('a');
 SELECT CHAR(98);
 	-> b
 ```
+
 	- LENGTH()
+  
 ```sql
 SELECT LENGTH(ename) FROM scott_emp;
 ```
@@ -438,6 +513,8 @@ SELECT TRUNCATE(1.73, 0);
 	- NOW(), SYSDATE(), CURDATE(), CURTIME()
 ```sql
 SELECT NOW();
+```
+```
 +---------------------+
 | NOW()               |
 +---------------------+
@@ -447,6 +524,8 @@ SELECT NOW();
 	- YEAR(), MONTH(), DAYOFMONTH()
 ```sql
 SELECT YEAR(NOW()), MONTH(NOW());
+```
+```
 +-------------+--------------+
 | YEAR(NOW()) | MONTH(NOW()) |
 +-------------+--------------+
@@ -456,6 +535,8 @@ SELECT YEAR(NOW()), MONTH(NOW());
 	- DAYOFWEEK(): 1-일요일, WEEKDAY(): 0-월요일
 ```sql
 SELECT DAYOFWEEK(NOW()), WEEKDAY(NOW());
+```
+```
 +------------------+----------------+
 | DAYOFWEEK(NOW()) | WEEKDAY(NOW()) |
 +------------------+----------------+
@@ -465,6 +546,8 @@ SELECT DAYOFWEEK(NOW()), WEEKDAY(NOW());
 	- DAOFYEAR(): 1년 중 며칠이 지났는지 알려줌
 ```sql
 SELECT DAYOFYEAR(NOW());
+```
+```
 +------------------+
 | DAYOFYEAR(NOW()) |
 +------------------+
@@ -474,6 +557,8 @@ SELECT DAYOFYEAR(NOW());
 	- DATE_ADD(), DATE_SUB()
 ```sql
 SELECT DATE_ADD(NOW(), interval 5 YEAR), DATE_ADD(NOW(), interval 5 DAY);
+```
+```
 +----------------------------------+---------------------------------+
 | DATE_ADD(NOW(), interval 5 YEAR) | DATE_ADD(NOW(), interval 5 DAY) |
 +----------------------------------+---------------------------------+
@@ -502,6 +587,8 @@ SELECT ename, job, comm,
 		ELSE 'no'
     END iscomm
 FROM scott_emp;
+```
+```
 +--------+-----------+--------+
 | ename  | comm      | iscomm |
 +--------+-----------+--------+
@@ -540,7 +627,7 @@ SELECT DATEDIFF('2019.12.25', NOW());
 |                                      273 |
 +------------------------------------------+
 
-2. 현재까지 근무한 직원들의 근무일수를 몇주 몇일로 조회(단, 근무일수가 많은 사람 순으로 조회)
+-- 2. 현재까지 근무한 직원들의 근무일수를 몇주 몇일로 조회(단, 근무일수가 많은 사람 순으로 조회)
 SELECT ename, TIMESTAMPDIFF(MONTH, hiredate, NOW()) as work_month, TIMESTAMPDIFF(DAY, hiredate, NOW()) as work_day 
 	FROM scott_emp ORDER BY work_month DESC, work_day DESC;
 +--------+------------+----------+
