--- a/_posts/2019-03-27-SQL(1).md
+++ b/_posts/2019-03-27-SQL(1).md
@@ -239,6 +239,7 @@ ORDER BY deptno, sal;
 	FROM 절
 	WHERE 절
 - 실행순서: from 절 -> where 절 -> select 절
+  
 ```sql
 -- 급여가 3000$ 이상인 직원의 사번, 이름, 급여를 조회
 SELECT empno, ename, sal 
@@ -455,26 +456,26 @@ WHERE comm >= sal*0.1;
 #### 3.1. Single-Row Function
 - String Function:
 	- ASCII(), CHAR()
+	- LENGTH()
+	- INSTR()
+	- LEFT(), RIGHT(), SUBSTR(), SUBSTRING()
+
+
 ```sql
 SELECT ASCII('a');
 	-> 97
 SELECT CHAR(98);
 	-> b
 ```
-
-	- LENGTH()
-  
 ```sql
 SELECT LENGTH(ename) FROM scott_emp;
 ```
-	- INSTR()
 ```sql
 SELECT INSTR('foobarbar', 'bar');
 	-> 4
 SELECT INSTR('foobarbar', 'love');
 	-> 0
 ```
-	- LEFT(), RIGHT(), SUBSTR(), SUBSTRING()
 ```sql
 SELECT LEFT('abcdefg', 3);
 	-> abc
@@ -489,11 +490,11 @@ SELECT SUBSTRING('i lovee sql', -3);
 SELECT SUBSTRING('i lovee sql', -9, 5);
 	-> lovee
 ```
-	- LOWER(), UPPER()
-	- LTRIM(), RTRIM(), TRIM()
 
 - Numeric Function
 	- CEIL(), FLOOR(), ROUND(), TRUNCATE()
+	- MOD()
+	- RAND()
 ```sql
 SELECT CEIL(1.23);
 	-> 2
@@ -506,11 +507,13 @@ SELECT ROUND(1.298, 1);
 SELECT TRUNCATE(1.73, 0);
 	-> 1
 ```
-	- MOD()
-	- RAND()
 
 - Date Function
 	- NOW(), SYSDATE(), CURDATE(), CURTIME()
+	- DAYOFWEEK(): 1-일요일, WEEKDAY(): 0-월요일
+	- DAOFYEAR(): 1년 중 며칠이 지났는지 알려줌
+	- DATE_ADD(), DATE_SUB()
+
 ```sql
 SELECT NOW();
 ```
@@ -532,7 +535,6 @@ SELECT YEAR(NOW()), MONTH(NOW());
 |        2019 |            3 |
 +-------------+--------------+
 ```
-	- DAYOFWEEK(): 1-일요일, WEEKDAY(): 0-월요일
 ```sql
 SELECT DAYOFWEEK(NOW()), WEEKDAY(NOW());
 ```
@@ -543,7 +545,6 @@ SELECT DAYOFWEEK(NOW()), WEEKDAY(NOW());
 |                4 |              2 |
 +------------------+----------------+
 ```
-	- DAOFYEAR(): 1년 중 며칠이 지났는지 알려줌
 ```sql
 SELECT DAYOFYEAR(NOW());
 ```
@@ -554,7 +555,6 @@ SELECT DAYOFYEAR(NOW());
 |               86 |
 +------------------+
 ```
-	- DATE_ADD(), DATE_SUB()
 ```sql
 SELECT DATE_ADD(NOW(), interval 5 YEAR), DATE_ADD(NOW(), interval 5 DAY);
 ```
@@ -621,15 +621,21 @@ SELECT empno, ename, sal, comm,
 ```sql
 -- 1. 오늘부터 12월 25일까지 몇일이 남았는가?
 SELECT DATEDIFF('2019.12.25', NOW());
+```
+```
 +------------------------------------------+
 | DAYOFYEAR('2019-12-25')-DAYOFYEAR(NOW()) |
 +------------------------------------------+
 |                                      273 |
 +------------------------------------------+
-
+```
+```sql
 -- 2. 현재까지 근무한 직원들의 근무일수를 몇주 몇일로 조회(단, 근무일수가 많은 사람 순으로 조회)
 SELECT ename, TIMESTAMPDIFF(MONTH, hiredate, NOW()) as work_month, TIMESTAMPDIFF(DAY, hiredate, NOW()) as work_day 
-	FROM scott_emp ORDER BY work_month DESC, work_day DESC;
+FROM scott_emp 
+ORDER BY work_month DESC, work_day DESC;
+```
+```
 +--------+------------+----------+
 | ename  | work_month | work_day |
 +--------+------------+----------+
@@ -648,10 +654,14 @@ SELECT ename, TIMESTAMPDIFF(MONTH, hiredate, NOW()) as work_month, TIMESTAMPDIFF
 | SCOTT  |        383 |    11667 |
 | ADAMS  |        382 |    11633 |
 +--------+------------+----------+
-
+```
+```sql
 -- 3. 10번 부서 직원들 중 현재까지의 근무월수를 계산해서 조회
-SELECT ename, hiredate, ROUND(DATEDIFF(NOW(), hiredate)/30) as totalmonth FROM scott_emp 
-	WHERE deptno=10;
+SELECT ename, hiredate, ROUND(DATEDIFF(NOW(), hiredate)/30) as totalmonth 
+FROM scott_emp 
+WHERE deptno=10;
+```
+```
 +--------+---------------------+------------+
 | ename  | hiredate            | totalmonth |
 +--------+---------------------+------------+
@@ -659,10 +669,14 @@ SELECT ename, hiredate, ROUND(DATEDIFF(NOW(), hiredate)/30) as totalmonth FROM s
 | KING   | 1981-11-17 00:00:00 |        455 |
 | MILLER | 1982-01-23 00:00:00 |        453 |
 +--------+---------------------+------------+
-
+```
+```sql
 -- 4. 20번 부서 직원들 중 입사일자로부터 13개월이 지난 후의 날짜를 조회
-SELECT ename, hiredate, DATE_ADD(hiredate, interval 13 MONTH) as checkingday FROM scott_emp 
-	WHERE deptno=20;
+SELECT ename, hiredate, DATE_ADD(hiredate, interval 13 MONTH) as checkingday 
+FROM scott_emp 
+WHERE deptno=20;
+```
+```
 +-------+---------------------+---------------------+
 | ename | hiredate            | checkingday         |
 +-------+---------------------+---------------------+
@@ -672,9 +686,12 @@ SELECT ename, hiredate, DATE_ADD(hiredate, interval 13 MONTH) as checkingday FRO
 | ADAMS | 1987-05-23 00:00:00 | 1988-06-23 00:00:00 |
 | FORD  | 1981-12-03 00:00:00 | 1983-01-03 00:00:00 |
 +-------+---------------------+---------------------+
-
+```
+```sql
 -- 5. 모든 직원에 대해 입사한 달의 근무일수를 조회
 SELECT ename, DAYOFMONTH(hiredate) as daysofworking FROM scott_emp;
+```
+```
 +--------+---------------+
 | ename  | daysofworking |
 +--------+---------------+
@@ -693,9 +710,12 @@ SELECT ename, DAYOFMONTH(hiredate) as daysofworking FROM scott_emp;
 | FORD   |             3 |
 | MILLER |            23 |
 +--------+---------------+
-
+```
+```sql
 -- 6. 현재 급여에 15%가 증가된 급여를 계산하여 사번,이름, 급여, 증가된 급여를 조회(단, 급여는 반올림하여 적용한다.)
 SELECT empno, ename, sal, ROUND(sal*1.15) as new_sal FROM scott_emp;
+```
+```
 +-------+--------+------+---------+
 | empno | ename  | sal  | new_sal |
 +-------+--------+------+---------+
@@ -714,9 +734,13 @@ SELECT empno, ename, sal, ROUND(sal*1.15) as new_sal FROM scott_emp;
 |  7902 | FORD   | 3000 |    3450 |
 |  7934 | MILLER | 1300 |    1495 |
 +-------+--------+------+---------+
-
+```
+```sql
 -- 7. 이름, 입사일, 입사일로부터 현재까지의 월수, 급여, 급여 총계를 조회
-SELECT ename, hiredate, ROUND(DATEDIFF(NOW(), hiredate)/30) as totalmonth, sal, sal*ROUND(DATEDIFF(NOW(), hiredate)/30) as totalsal FROM scott_emp;
+SELECT ename, hiredate, ROUND(DATEDIFF(NOW(), hiredate)/30) as totalmonth, sal, sal*ROUND(DATEDIFF(NOW(), hiredate)/30) as totalsal 
+FROM scott_emp;
+```
+```
 +--------+---------------------+------------+------+----------+
 | ename  | hiredate            | totalmonth | sal  | totalsal |
 +--------+---------------------+------------+------+----------+
@@ -735,7 +759,8 @@ SELECT ename, hiredate, ROUND(DATEDIFF(NOW(), hiredate)/30) as totalmonth, sal, 
 | FORD   | 1981-12-03 00:00:00 |        454 | 3000 |  1362000 |
 | MILLER | 1982-01-23 00:00:00 |        453 | 1300 |   588900 |
 +--------+---------------------+------------+------+----------+
-
+```
+```sql
 -- 8. 업무가 analyst이면 급여를 10%증가시키고 clerk이면 15%, manager이면 20%증가 시켜서 이름, 업무, 급여, 증가된 급여를 조회
 SELECT ename, job, sal, 
 	CASE 
@@ -745,6 +770,8 @@ SELECT ename, job, sal,
         ELSE 'no' 
 	END new_sal 
 FROM scott_emp;
+```
+```
 +--------+-----------+------+---------+
 | ename  | job       | sal  | new_sal |
 +--------+-----------+------+---------+
@@ -763,9 +790,13 @@ FROM scott_emp;
 | FORD   | ANALYST   | 3000 | 3300.0  |
 | MILLER | CLERK     | 1300 | 1495.0  |
 +--------+-----------+------+---------+
+```
+```sql
 -- 9. 이름의 첫글자가 k보다 크고 y보다 작은 직원의 이름, 부서, 업무를 조회하시오.
 SELECT ename, job, empno FROM scott_emp 
-	WHERE LEFT(ename, 1) > 'k' AND LEFT(ename, 1) < 'y'; 
+	WHERE LEFT(ename, 1) > 'k' AND LEFT(ename, 1) < 'y'
+```
+``` 
 +--------+----------+-------+
 | ename  | job      | empno |
 +--------+----------+-------+
