--- a/_posts/2019-03-27-SQL(1).md
+++ b/_posts/2019-03-27-SQL(1).md
@@ -18,6 +18,8 @@ mysql> USE world;
 mysql> SHOW tables;
 mysql> DESC country;
 mysql> SELECT name, capital FROM country;
+```
+```sql
 -- sqlplus창 보기 화면 여백 조절 편집 명령어
 -- 단순 sqlplus tool만의 평집 명령어
 -- 영구 저장 안됨. sqlplus 실행시마다 해 줘야 함
@@ -353,7 +355,7 @@ WHERE hiredate > '1982,01,01';
 -- 커미션이 없는 직원의 이름, 부서, 업무, 급여, 커미션 조회
 SELECT ename, empno, job, sal, comm 
 FROM scott_emp
-WHERE comm is null;
+WHERE comm IS null;
 
 SELECT ename, empno, job, sal, comm 
 FROM scott_emp
@@ -427,17 +429,17 @@ WHERE hiredate > '1981-01-01' AND hiredate < '1981-12-31';
 -- 2. 사번이 7902, 7788, 7566인 사원의 이름, 업무, 급여, 입사일자 조회
 SELECT ename, job, hiredate 
 FROM scott_emp
-WHERE empno in (7902, 7788, 7566);
+WHERE empno IN 7902, 7788, 7566);
 
 -- 3. 업무가 manager, clerk, analyst가 아닌 직원의 이름, 업무, 급여, 부서번호 조회
 SELECT ename, job, empno 
 FROM scott_emp
-WHERE job not in ('manager', 'clerk', 'analyst');
+WHERE job NOT IN ('manager', 'clerk', 'analyst');
 
 -- 4. 업무가 president 또는 salesman이고 급여가 1500인 직원의 이름, 급여, 업무, 부서번호 조회
 SELECT ename, sal, job, empno 
 FROM scott_emp
-WHERE job in ('president', 'salesman') AND sal=1500;
+WHERE job IN ('president', 'salesman') AND sal=1500;
 
 -- 5. 가장 최근에 입사한 직원의 이름, 부서, 업무, 입사일자 조회 (현재 검색 일자가 1987년이라 가정)
 SELECT ename, deptno, job, max(hiredate) 
@@ -495,6 +497,7 @@ SELECT SUBSTRING('i lovee sql', -9, 5);
 	- CEIL(), FLOOR(), ROUND(), TRUNCATE()
 	- MOD()
 	- RAND()
+  
 ```sql
 SELECT CEIL(1.23);
 	-> 2
@@ -573,12 +576,14 @@ SELECT DATE_ADD(NOW(), interval 5 YEAR), DATE_ADD(NOW(), interval 5 DAY);
 
 #### 3.3. 기타
 - CONVERT()
+  
 ```sql
 SELECT CONVERT('2019-5-1', DATE);
 SELECT CONVERT(150, CHAR);
 SELECT CONVERT('14:06:10', TIME);
 ```
 - CASE()
+  
 ```sql
 -- 업무가 salesman이면 'yes' 이라고하고, 그 외 업무는 'no' 라고 조회
 SELECT ename, job, comm,
@@ -609,6 +614,7 @@ FROM scott_emp;
 +--------+-----------+--------+
 ```
 - COALESCE()
+  
 ```sql
 -- 현재 직원들의 총 급여를 조회
 SELECT empno, ename, sal, comm, (sal+comm) as total FROM scott_emp; --null값 처리가 안됨
