--- a/_posts/2019-03-29-SQL(3).md
+++ b/_posts/2019-03-29-SQL(3).md
@@ -67,23 +67,27 @@ INSERT INTO tableC VALUES(9, 90);
 ```
 ### Inner Join
 ```sql
-SELECT tableA.id, tableA.value FROM tableA INNER JOIN tableB 
-	ON tableA.id = tableB.id; 
+SELECT tableA.id, tableA.value 
+FROM tableA INNER JOIN tableB 
+ON tableA.id = tableB.id; 
 
 -- 별명 주기! 
 -- note: 별명주면 별명만 사용해야 함, table 별명 as 사용 불가
-SELECT a.id, a.value FROM tableA a INNER JOIN tableB b 
-	ON a.id = b.id; 
+SELECT a.id, a.value 
+FROM tableA a INNER JOIN tableB b 
+ON a.id = b.id; 
 
 -- mysql 자체 문법
-SELECT a.id, a.value FROM tableA a, tableB b 
-	 WHERE a.id = b.id; 
+SELECT a.id, a.value 
+FROM tableA a, tableB b 
+WHERE a.id = b.id; 
 
 -- 직원의 사번, 이름, 업무, 부서번호, 부서명을 조회
 SELECT empno, ename, job, scott_emp.deptno, dname 
-	FROM scott_emp INNER JOIN scott_dept 
-	ON scott_emp.deptno = scott_dept.deptno;
-
+FROM scott_emp INNER JOIN scott_dept 
+ON scott_emp.deptno = scott_dept.deptno;
+```
+```
 +-------+--------+-----------+--------+------------+
 | empno | ename  | job       | deptno | dname      |
 +-------+--------+-----------+--------+------------+
@@ -102,19 +106,21 @@ SELECT empno, ename, job, scott_emp.deptno, dname
 |  7844 | TURNER | SALESMAN  |     30 | SALES      |
 |  7900 | JAMES  | CLERK     |     30 | SALES      |
 +-------+--------+-----------+--------+------------+
-
+```
+```sql
 -- salesman에 대해서 직원의 사번, 이름, 업무, 부서번호, 부서명을 조회
 -- ! 조건을 조인하면서 같이줄 때
 SELECT empno, ename, job, e.deptno, dname 
-	FROM scott_emp e INNER JOIN scott_dept d 
-	ON e.deptno = d.deptno AND job = 'salesman';
+FROM scott_emp e INNER JOIN scott_dept d 
+ON e.deptno = d.deptno AND job = 'salesman';
 
 -- ! 조건을 조인 하고 나서 뒤에 줄 때
 SELECT empno, ename, job, e.deptno, dname 
-	FROM scott_emp e INNER JOIN scott_dept d 
-	ON e.deptno = d.deptno 
-	WHERE job = 'salesman';
-
+FROM scott_emp e INNER JOIN scott_dept d 
+ON e.deptno = d.deptno 
+WHERE job = 'salesman';
+```
+```
 +-------+--------+----------+--------+-------+
 | empno | ename  | job      | deptno | dname |
 +-------+--------+----------+--------+-------+
@@ -123,12 +129,15 @@ SELECT empno, ename, job, e.deptno, dname
 |  7654 | MARTIN | SALESMAN |     30 | SALES |
 |  7844 | TURNER | SALESMAN |     30 | SALES |
 +-------+--------+----------+--------+-------+
-
+```
+```sql
 -- New york에서 근무하는 직원의 이름, 업무, 부서명 조회
 SELECT ename, job, scott_dept.dname 
-	FROM scott_dept INNER JOIN scott_emp 
-	on scott_emp.deptno = scott_dept.deptno 
-	where loc='NEW YORK';
+FROM scott_dept INNER JOIN scott_emp 
+ON scott_emp.deptno = scott_dept.deptno 
+WHERE loc='NEW YORK';
+```
+```
 +--------+-----------+------------+
 | ename  | job       | dname      |
 +--------+-----------+------------+
@@ -140,9 +149,11 @@ SELECT ename, job, scott_dept.dname
 
 ### Outer Join
 ```sql
-SELECT a.id, a.value FROM tableA a LEFT OUTER JOIN tableB b 
-	ON a.id = b.id;
-
+SELECT a.id, a.value 
+FROM tableA a LEFT OUTER JOIN tableB b 
+ON a.id = b.id;
+```
+```
 +------+-------+
 | id   | value |
 +------+-------+
@@ -152,10 +163,13 @@ SELECT a.id, a.value FROM tableA a LEFT OUTER JOIN tableB b
 |    3 |    30 |
 |    7 |    70 |
 +------+-------+
-
-SELECT b.id, b.value FROM tableA a RIGHT OUTER JOIN tableB b 
-	ON a.id = b.id;
-
+```
+```sql
+SELECT b.id, b.value 
+FROM tableA a RIGHT OUTER JOIN tableB b 
+ON a.id = b.id;
+```
+```
 +------+-------+
 | id   | value |
 +------+-------+
@@ -169,17 +183,18 @@ SELECT b.id, b.value FROM tableA a RIGHT OUTER JOIN tableB b
 ```sql
 -- 직원들의 이름, 급여, 근무지를 조회. 단, 부서명과 근무지는 모두 출력할 수 있도록 하시오
 SELECT ename, sal, dname, loc 
-	FROM scott_emp RIGHT OUTER JOIN scott_dept 
-	ON scott_emp.deptno = scott_dept.deptno;
+FROM scott_emp RIGHT OUTER JOIN scott_dept 
+ON scott_emp.deptno = scott_dept.deptno;
 ```
 ### Non-Equi Join
 
 ```sql
 ---직원들의 사번, 이름, 급여, 급여등급 조회
 SELECT empno, ename, sal, grade, losal, hisal 
-	FROM scott_emp e INNER JOIN scott_salgrade s 
-	ON e.sal >= s.losal AND e.sal <= s.hisal;
-
+FROM scott_emp e INNER JOIN scott_salgrade s 
+ON e.sal >= s.losal AND e.sal <= s.hisal;
+```
+```
 +-------+--------+------+-------+-------+-------+
 | empno | ename  | sal  | grade | losal | hisal |
 +-------+--------+------+-------+-------+-------+
@@ -205,10 +220,10 @@ SELECT empno, ename, sal, grade, losal, hisal
 -- 직원의 사번, 이름, 업무, 관리자, 관리자이름 조회
 -- 별명주기 필수
 SELECT e.empno, e.ename, e.job, e.mgr, m.ename 
-	FROM scott_emp e INNER JOIN scott_emp m 
-    ON e.mgr = m.empno;
+FROM scott_emp e INNER JOIN scott_emp m 
+ON e.mgr = m.empno;
 ```
-<pre class='output'>
+```
 +-------+--------+----------+------+-------+
 | empno | ename  | job      | mgr  | ename |
 +-------+--------+----------+------+-------+
@@ -226,21 +241,20 @@ SELECT e.empno, e.ename, e.job, e.mgr, m.ename
 |  7902 | FORD   | ANALYST  | 7566 | JONES |
 |  7934 | MILLER | CLERK    | 7782 | CLARK |
 +-------+--------+----------+------+-------+
-</pre>
-
+```
 
 ## 세개 이상 JOIN
 ```sql
 SELECT a.id, a.value, b.id, b.value, c.id, c.value
-	FROM tableA a INNER JOIN tableB b
-    ON a.id = b.id
-    INNER JOIN tableC c
-    ON b.id = c.id;
+FROM tableA a INNER JOIN tableB b
+ON a.id = b.id
+INNER JOIN tableC c
+ON b.id = c.id;
 
 -- mysql 자체 문법
 SELECT a.id, a.value, b.id, b.value, c.id, c.value
-	FROM tableA a, tableB b, tableC c
-    WHERE a.id = b.id AND b.id = c.id;
+FROM tableA a, tableB b, tableC c
+WHERE a.id = b.id AND b.id = c.id;
 ```
 
 ## SET 연산자
@@ -248,7 +262,8 @@ SELECT a.id, a.value, b.id, b.value, c.id, c.value
 SELECT deptno FROM scott_emp 
 UNION 
 SELECT deptno FROM scott_dept;
-
+```
+```
 +--------+
 | deptno |
 +--------+
@@ -257,11 +272,13 @@ SELECT deptno FROM scott_dept;
 |     30 |
 |     40 |
 +--------+
-
+```
+```sql
 SELECT deptno FROM scott_emp 
 UNION ALL 
 SELECT deptno FROM scott_dept;
-
+```
+```
 +--------+
 | deptno |
 +--------+
@@ -347,8 +364,6 @@ CREATE TABLE tableEXAM(
 	CONSTRAINT pk_id PRIMARY KEY(id)
 );
 ```
-```sql
--- data dictionary
-```
+
 
 
